- bug fix: black line/border under the searchbar is no longer visible when searchbar is out of focus - bug fix: searchbar is cleared and results list are cleared when searchbar is out of focus - code refactoring and cleanup - TODO: [future refinement] search results page when user presses "enter" without selecting one of the displayed results in the (live) rendered result list; does not affect general functionality, as all possible search results are rendered in the result list

--- a/src/components/SearchEngine/PatientSearch/PatientSearch.css
+++ b/src/components/SearchEngine/PatientSearch/PatientSearch.css
@@ -2,9 +2,9 @@
     position: absolute;
     background-color: white;
     width: 300%;
-    border-color: black;
-    border-style: solid;
-    border-top-color: white;
+    border-color: transparent;
+    border-style: none;
+    border-top-color: transparent;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
     z-index: 1;
